<resources>
    <string name="app_name">Pintogogo</string>
    <string name="facebook_app_id">258809508225702</string>
    <string name="CurrencySymbol">$</string>
    <string name="Sender_Id">463266926227</string>
    <string name="TeliverId">d82d2a8dbf9f4721722b2c2a3cc1a8c5</string>
    <string name="btnTxtTracker">Track Your Order</string>
    <string name="PleaseEnterCardNumber">Please enter card number</string>
    <string name="PleaseEnterCardHoldername">Please enter card holder name</string>
    <string name="PleaseEnterExpiryYear">Please enter expiry year </string>
    <string name="PleaseEnterexpiryMonth">Please enter expiry month</string>
    <string name="PleaseEnterCvvnumber">Please enter CVV number</string>
    <string name="PleaseEnterTheAmount">Please enter the amount</string>
    <string name="PleaseEnterTheAmountGrater">Please enter the amount Great than 0</string>
    <string name="CardHolderName">Card Holder Name</string>
    <string-array name="Month">
        <item>Month</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="Year">
        <item>Year</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
    <string name="CVV">CVV</string>
    <string name="MONTH">Month</string>
    <string name="YEAR">Year</string>
    <string name="TheCardNumberInvalid">The card number that you entered is invalid</string>
    <string name="TheCVVInvalid">The CVC code that you entered is invalid</string>
    <string name="CardInvalid">The card details that you entered are invalid</string>
    <string name="TheExpirationDateInvalid">The Expiration date that you entered is invalid</string>
    <string name="AreYouSureConfirm">Are you sure confirm this card</string>
    <string name="Yes">Yes</string>
    <string name="ValidThrough">Valid Thur</string>
    <string name="Payment">Payment</string>
    <string name="CardManagement">Card Management</string>
    <string name="Delete">Delete</string>
    <string name="DeleteCard">Are you sure to delete card</string>
    <string name="SuccessDeleteCard">Successfully deleted card</string>
    <string name="FailedMessage">Something went wrong, please try again</string>
    <string name="CardAddeddMessage">Card added successfully</string>
    <string-array name="Timehour">
        <item>Select Time</item>
        <item>12:00 AM</item>
        <item>12:15 AM</item>
        <item>12:30 AM</item>
        <item>12:45 AM</item>
        <item>01:00 AM</item>
        <item>01:15 AM</item>
        <item>01:30 AM</item>
        <item>01:45 AM</item>
        <item>02:00 AM</item>
        <item>02:15 AM</item>
        <item>02:30 AM</item>
        <item>02:45 AM</item>
        <item>03:00 AM</item>
        <item>03:15 AM</item>
        <item>03:30 AM</item>
        <item>03:45 AM</item>
        <item>04:00 AM</item>
        <item>04:15 AM</item>
        <item>04:30 AM</item>
        <item>04:45 AM</item>
        <item>05:00 AM</item>
        <item>05:15 AM</item>
        <item>05:30 AM</item>
        <item>05:45 AM</item>
        <item>06:00 AM</item>
        <item>06:15 AM</item>
        <item>06:30 AM</item>
        <item>06:45 AM</item>
        <item>07:00 AM</item>
        <item>07:15 AM</item>
        <item>07:30 AM</item>
        <item>07:45 AM</item>
        <item>08:00 AM</item>
        <item>08:15 AM</item>
        <item>08:30 AM</item>
        <item>08:45 AM</item>
        <item>09:00 AM</item>
        <item>09:15 AM</item>
        <item>09:30 AM</item>
        <item>9.:5 AM</item>
        <item>10:00 AM</item>
        <item>10:15 AM</item>
        <item>10:30 AM</item>
        <item>10:45 AM</item>
        <item>11:00 AM</item>
        <item>11:15 AM</item>
        <item>11:30 AM</item>
        <item>11:45 AM</item>
        <item>12:00 PM</item>
        <item>12:15 PM</item>
        <item>01:00 PM</item>
        <item>01:15 PM</item>
        <item>01:30 PM</item>
        <item>01:45 PM</item>
        <item>02:00 PM</item>
        <item>02:15 PM</item>
        <item>02:30 PM</item>
        <item>02:45 PM</item>
        <item>03:00 PM</item>
        <item>03:15 PM</item>
        <item>03:30 PM</item>
        <item>03:45 PM</item>
        <item>04:45 PM</item>
        <item>05:00 PM</item>
        <item>05:15 PM</item>
        <item>05:30 PM</item>
        <item>05:45 PM</item>
        <item>06:00 PM</item>
        <item>06:15 PM</item>
        <item>06:30 PM</item>
        <item>06:45 PM</item>
        <item>07:00 PM</item>
        <item>07:15 PM</item>
        <item>07:30 PM</item>
        <item>07:45 PM</item>
        <item>08:00 PM</item>
        <item>08:15 PM</item>
        <item>08:30 PM</item>
        <item>08:45 PM</item>
        <item>09:00 PM</item>
        <item>09:15 PM</item>
        <item>09:30 PM</item>
        <item>09:45 PM</item>
        <item>10:00 PM</item>
        <item>10:15 PM</item>
        <item>10:30 PM</item>
        <item>10:45 PM</item>
        <item>11:00 PM</item>
        <item>11:15 PM</item>
        <item>11:30 PM</item>
        <item>11:45 PM</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="txtorderplaced">YOUR ORDER IS PLACED</string>
    <string name="txtPackageDispatched">YOUR PACKAGE IS DISPATCHED</string>
    <string name="txtOnRoute">Order Picked Up \n\n<u>Track With Teliver</u></string>
    <string name="txtOrderDeivered">Order T \'elivered</string>
    <string name="txtInKitchen">Order Confirmed</string>
    <string name="txtDeliveryDetails">YOUR DELIVERY DETAILS</string>
    <string name="txtName">Name</string>
    <string name="txtCart">Cart</string>
    <string name="txtOrder">Order</string>
    <string name="txtAddress">Delivery Address</string>
    <string name="txtMobile">Mobile Number</string>
    <string name="txtCartItems">YOUR ORDER ITEMS</string>
    <string name="txtStartTracking">Start Tracking</string>
    <string name="txtPaymentSuccess">Order Received</string>
    <string name="txtOrderConfirmed">ORDER CONFIRMED</string>
    <string name="txtTeliverId">The tracking id you received from Teliver, enter it to track your order</string>
    <string name="txtNearYou">Near your Delivery Address (View in Maps)</string>
    <string name="txtFoodHint">Hot and Tasty food will be on the way soon</string>
    <string name="txtProcessing">Order Processing</string>
    <string name="txtOutToDelivery">Your order is now out for delivery.Track your Order</string>
    <string name="txtNearDoorPush">Your order has been confirmed by Restaurant. Soon it will be out for delivery.</string>
    <string name="txtDeliveredPush">Your order has been delivered successfully.</string>
    <string name="txtDeliveryAssigned">Order has been confirmed by Restaurant. Waiting for Delivery Agent</string>
    <string name="txtSubTotal">Subtotal</string>
    <string name="txtResPromo">Coupon Code</string>
    <string name="txtTaxes">GST (18%)</string>
    <string name="txtFinaltotal">You Paid</string>
    <string name="symbolRupee">₹</string>
    <string name="txtorderID">Order Id</string>
    <string name="oderId">164752266</string>
    <string name="txtPaymentMode">PAYMENT MODE</string>
    <string name="paymentMode">CARD PAYMENT</string>
    <string name="txtPackingCharge">Packaging Charge</string>
    <string name="txtDeliveryCharge">Delivery Charge</string>
    <string name="welcome">Welcome!</string>
    <string name="whatcan">what can</string>
    <string name="weServeYou">we serve you</string>
    <string name="today">today?</string>
    <string name="searchByCity">Search By City</string>
    <string name="SearchByRestaurant">Search By Restaurant</string>
    <string name="searchByCuisine">Search By Cuisine</string>
    <string name="selectRestaurant">Select Restaurant</string>
    <string name="selectCuisine">Select Cuisine</string>
    <string name="selectCity">Select City</string>
    <string name="selectArea">Select Area</string>
    <string name="search">Search</string>
    <string name="searchMenu">Menu Search</string>
    <string name="or">OR</string>
    <string name="useCurrentLocation">Find Restaurant near me</string>
    <string name="location">Shop</string>
    <string name="basket">Basket</string>
    <string name="orders">Orders</string>
    <string name="favorite">Favourite</string>
    <string name="account">Account</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="show">Show</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="login">LOGIN</string>
    <string name="oor">or</string>
    <string name="socialAccount">Do you login with social account?</string>
    <string name="faceBook">Login with FaceBook</string>
    <string name="google">Login with Google</string>
    <string name="newUser">New User?</string>
    <string name="hide">Hide</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailSmall">Email</string>
    <string name="mobileNumbers">Mobile Number</string>
    <string name="passwordSmall">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="referralCode">Referral Code</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="more">More</string>
    <string name="action">Actions</string>
    <string name="profile">Profile</string>
    <string name="myAddress">My Address</string>
    <string name="changePassword">Change Password</string>
    <string name="cardManagement">Card Management</string>
    <string name="rewardPoint">Reward Points</string>
    <string name="wallet">Wallet</string>
    <string name="tableHistory">Table History</string>
    <string name="info">INFO</string>
    <string name="termsConditions">Terms &amp; Conditions</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="myProfile">My Profile</string>
    <string name="changePhoto">Change photo</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="cardholderName">Card Holder Name</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardAddress">Enter Your Card Address</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">CVV</string>
    <string name="cancel">Cancel</string>
    <string name="nocard">No Card</string>
    <string name="alert">Alert!!</string>
    <string name="exitTheApp">Are you sure want to exit the app...</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="notEnough">Subtotal not enough to apply voucher.Please increase the quantity!</string>
    <string name="ok">OK</string>
    <string name="replaceCart">Replace cart item?</string>
    <string name="cardStripe">Card( Stripe )</string>
    <string name="newCards">New Cards</string>
    <string name="savedCards">Saved Cards</string>
    <string name="enterYourCardAddress">Enter Your Card Address</string>
    <string name="postalCode">Postal Code</string>
    <string name="saveCardoptional">Save Card (optional)</string>
    <string name="enterTipAmount">Enter Tip Amount</string>
</resources>