<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/bannerfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:padding="5dp"
        android:text="@string/notEnough"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:background="@color/white"
            />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="13sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:background="@color/white"/>
    </LinearLayout>

</LinearLayout>
