<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alertTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/normal"/>

        <TextView
            android:id="@+id/secondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exitTheApp"
            android:textSize="13.5sp"
            android:layout_below="@+id/alertTextView"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/normal"/>

        <TextView
            android:id="@+id/yesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:fontFamily="@font/normal"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/secondText"/>

        <TextView
            android:id="@+id/noTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="15sp"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/yesTextView"
            android:fontFamily="@font/normal"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/secondText"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>